# apirest_empleados

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/empleados/: admin.py  api.py  models.py  serializers.py  urls.py
backend/empleados/migrations/: 0001_initial.py
